Add webR and supporting UI dependencies
Add webR package for R execution in WebAssembly. Include xterm for terminal UI, react-icons for icons, react-resizable-panels for layout, and codemirror-lang-r for R syntax highlighting.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vitejs/plugin-react": "^5.0.2",
     "codemirror": "^6.0.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "webr": "^0.5.6"
   }
 }
