Add R language support to CodeMirror editor
Replace JavaScript syntax highlighting with R language pack (codemirror-lang-r) to properly highlight R code syntax in the editor.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
     "codemirror": "^6.0.1",
+    "codemirror-lang-r": "^0.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "webr": "^0.5.6"
