--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "dev": "vite",
     "test": "vitest",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "ladle": "ladle serve",
+    "ladle:build": "ladle build"
   },
   "devDependencies": {
+    "@ladle/react": "^5.1.1",
     "@types/node": "^20.14.9",
     "@vitest/browser": "^4.0.8",
     "@vitest/browser-playwright": "^4.0.8",
