--- a/package.json
+++ b/package.json
@@ -31,10 +31,8 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
     "codemirror": "^6.0.1",
-    "codemirror-lang-r": "^0.1.1",
     "pyodide": "^0.26.4",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "webr": "^0.5.6"
+    "react-dom": "^19.1.1"
   }
 }
