Restructure repository for PyPI distribution
Move web frontend to web/ subdirectory and create top-level Python
package structure. Add pyproject.toml for modern Python packaging.
Update README and .gitignore to reflect hybrid monorepo layout.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,37 @@
+# Node.js / Web frontend
 node_modules
-dist
+web/dist
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+dist/
+*.egg-info/
+.eggs/
+*.egg
+
+# Testing
 tests/.cache
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Type checking
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
