Add file reading endpoint and complete Python backend implementation
Backend Changes:
- Add GET /api/read-file endpoint to read files from filesystem
- Implement CLI with Click framework (rdit command)
- Add threading-based server startup for reliable browser opening
- Add tests for file reading endpoint (12 server tests now)
- Create bd issue (rdit-mit) for path validation security
- Add CLI entry point to pyproject.toml

Frontend Changes:
- Create useScriptFile hook to load script files from backend
- Update App.tsx to read script query param and load file contents
- Add Vite proxy config to forward /api requests to backend (port 8888)
- Show loading state while script file is being fetched

Documentation:
- Update README with Quick Start, CLI usage, and architecture overview
- Create DEVELOPMENT.md with comprehensive development guide
- Update tutorial status: Phase 1 complete (all backend components done)
- Document uv-based workflow and proxy configuration

The CLI now supports the full workflow:
  rdit script.py
    → Starts server on port 8888
    → Opens browser to http://127.0.0.1:8888?script=/path/to/script.py
    → Frontend loads file via /api/read-file endpoint

All tests passing: 44/44 (32 executor + 12 server)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,12 @@ classifiers = [
 dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
+    "click>=8.0.0",
+    "aiofiles>=23.0.0",
 ]
+
+[project.scripts]
+rdit = "rdit.cli:main"
 
 [project.optional-dependencies]
 dev = [
