Fix frontend assets packaging for uvx installation
Move built frontend from web/dist/ to rdit/_static/ so it's included
in the Python package. This follows the marimo pattern of bundling
web assets inside the package directory.

Changes:
- Move built assets to rdit/_static/ (inside package)
- Update Vite config to build directly to rdit/_static/
- Add MANIFEST.in to include static files in distribution
- Update server.py and cli.py to reference new location
- Update DEVELOPMENT.md with new build workflow

This fixes the "Frontend build not found" warning when installing
via uvx from GitHub.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,10 +46,16 @@ Homepage = "https://github.com/vangberg/rdit"
 Repository = "https://github.com/vangberg/rdit"
 Issues = "https://github.com/vangberg/rdit/issues"
 
+[tool.setuptools]
+include-package-data = true
+
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["rdit*"]
-exclude = ["tests*", "web*"]
+exclude = ["tests*"]
+
+[tool.setuptools.package-data]
+"*" = ["*.html", "*.js", "*.css"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
