--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "uvicorn[standard]>=0.24.0",
     "click>=8.0.0",
     "aiofiles>=23.0.0",
+    "watchdog>=3.0.0",
 ]
 
 [project.scripts]
