Add file watching infrastructure with watchfiles
Implements file watcher using watchfiles (Rust-based, async-first) instead of watchdog.
This provides better performance, simpler code, and native async support.

Changes:
- Add watchfiles>=0.20.0 dependency
- Create rdit/file_watcher.py with FileWatcher class and event creators
- Create rdit/sse.py utility for SSE formatting
- Add comprehensive FILE_WATCHER_TUTORIAL.md documenting architecture decisions

Key benefits of watchfiles over watchdog:
- Native async support (no threading/queues needed)
- ~60% code reduction (117 lines vs 270 lines)
- Faster (Rust-based using Notify library)
- Simpler API (direct async generators)
- Automatic cleanup (no manual start/stop)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "uvicorn[standard]>=0.24.0",
     "click>=8.0.0",
     "aiofiles>=23.0.0",
+    "watchfiles>=0.20.0",
 ]
 
 [project.scripts]
