--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ dev = [
     "black>=23.0",
     "mypy>=1.0",
     "ruff>=0.1.0",
+    "pandas>=2.0.0",
+    "polars>=0.19.0",
 ]
 
 [project.urls]
