--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,6 @@ dev = [
     "ruff>=0.1.0",
     "pandas>=2.0.0",
     "polars>=0.19.0",
-    "matplotlib>=3.5.0",
 ]
 
 [project.urls]
@@ -81,3 +80,9 @@ python_version = "3.8"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+
+[dependency-groups]
+dev = [
+    "matplotlib>=3.7.5",
+    "polars>=1.8.2",
+]
