Rename project from rdit to pdit
- Renamed main package directory: rdit/ → pdit/
- Updated all Python imports and module references
- Updated package name in pyproject.toml and package.json
- Updated CLI entry point: rdit → pdit
- Updated documentation (README, DEVELOPMENT, AGENTS.md)
- Updated Claude skill from rdit to pdit
- Updated build configuration and workflows
- Updated all test imports
- Renamed all 70 beads issues from rdit-* to pdit-* prefix
- Updated lock files (uv.lock, package-lock.json)

--- a/.github/workflows/build-dist.yml
+++ b/.github/workflows/build-dist.yml
@@ -39,7 +39,7 @@ jobs:
           mkdir -p /tmp/dist-deploy
 
           # Copy Python source files
-          cp -r rdit /tmp/dist-deploy/
+          cp -r pdit /tmp/dist-deploy/
 
           # Copy essential files
           cp pyproject.toml /tmp/dist-deploy/
@@ -50,7 +50,7 @@ jobs:
           # Create .gitattributes for dist branch
           cat > /tmp/dist-deploy/.gitattributes << 'EOF'
           # Mark static assets as generated
-          rdit/_static/* linguist-generated=true
+          pdit/_static/* linguist-generated=true
           EOF
 
       - name: Deploy to dist branch
