--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "rdit"
+name = "pdit"
 version = "0.1.0"
 description = "Interactive Python code editor with inline execution results"
 readme = "README.md"
@@ -31,7 +31,7 @@ dependencies = [
 ]
 
 [project.scripts]
-rdit = "rdit.cli:main"
+pdit = "pdit.cli:main"
 
 [project.optional-dependencies]
 dev = [
@@ -45,16 +45,16 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/vangberg/rdit"
-Repository = "https://github.com/vangberg/rdit"
-Issues = "https://github.com/vangberg/rdit/issues"
+Homepage = "https://github.com/vangberg/pdit"
+Repository = "https://github.com/vangberg/pdit"
+Issues = "https://github.com/vangberg/pdit/issues"
 
 [tool.setuptools]
 include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["rdit*"]
+include = ["pdit*"]
 exclude = ["tests*"]
 
 [tool.setuptools.package-data]
