Fix issuerizer action reference in workflow

--- a/.github/workflows/summarize_issue.yml
+++ b/.github/workflows/summarize_issue.yml
@@ -13,7 +13,7 @@ jobs:
       issues: write
     steps:
       - name: Run Issuerizer
-        uses: harryvangberg/issuerizer@main
+        uses: vangberg/issuerizer@main
         with:
           # Dynamically get the issue number from the event
           issue-query: "${{ github.repository }}#${{ github.event.issue.number }}"
