--- a/.github/workflows/summarize_issue.yml
+++ b/.github/workflows/summarize_issue.yml
@@ -1,7 +1,7 @@
 name: Auto-Summarize Issue
 on:
   issues:
-    types: [opened, edited, labeled]
+    types: [opened, edited, labeled, closed]
   issue_comment:
     types: [created, edited, deleted]
 
