Rename `pdit run` to `pdit start` and document export
- Rename the `run` CLI command to `start` for clarity
- Update README.md with new command and add Exporting section
- Update skill docs with new command and export documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
 ]
 
 [project.scripts]
-pdit = "pdit.cli:app"
+pdit = "pdit.cli:main"
 
 [project.optional-dependencies]
 dev = [
