--- a/.github/workflows/summarize_issue.yml
+++ b/.github/workflows/summarize_issue.yml
@@ -18,5 +18,6 @@ jobs:
           # Dynamically get the issue number from the event
           issue-query: "${{ github.repository }}#${{ github.event.issue.number }}"
           update: "true"
+          update-parent: "true"
           anthropic-api-key: ${{ secrets.ANTHROPIC_API_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
