--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,7 @@ disallow_untyped_defs = true
 
 [dependency-groups]
 dev = [
+    "great-tables>=0.20.0",
     "itables>=2.3.0",
     "matplotlib>=3.7.5",
     "pandas>=2.0.3",
