--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
     "@vitejs/plugin-react": "^5.0.2",
     "codemirror": "^6.0.1",
     "diff": "^8.0.2",
+    "lucide-react": "^0.562.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0"
