Fix uv dev deps and examples extras

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,14 +38,11 @@ dependencies = [
 pdit = "pdit.cli:main"
 
 [project.optional-dependencies]
-dev = [
-    "pytest>=7.0",
-    "pytest-asyncio>=0.21.0",
-    "black>=23.0",
-    "mypy>=1.0",
-    "ruff>=0.1.0",
-    "pandas>=2.0.0",
-    "polars>=0.19.0",
+examples = [
+    "great-tables>=0.20.0",
+    "matplotlib>=3.7.5",
+    "pandas>=2.0.3",
+    "polars>=1.8.2",
 ]
 
 [project.urls]
@@ -63,6 +60,15 @@ exclude = ["tests*"]
 
 [tool.setuptools.package-data]
 "*" = ["*.html", "*.js", "*.css"]
+
+[tool.uv]
+dev-dependencies = [
+    "pytest>=7.0",
+    "pytest-asyncio>=0.21.0",
+    "black>=23.0",
+    "mypy>=1.0",
+    "ruff>=0.1.0",
+]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -84,12 +90,3 @@ python_version = "3.8"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
-
-[dependency-groups]
-dev = [
-    "great-tables>=0.20.0",
-    "itables>=2.3.0",
-    "matplotlib>=3.7.5",
-    "pandas>=2.0.3",
-    "polars>=1.8.2",
-]
