--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
     "aiofiles>=23.0.0",
     "watchfiles>=0.20.0",
     "jupyter_client>=8.0.0",
-    "xeus-python>=0.17.0",
+    "ipykernel>=6.29.0",
     "itables>=2.6.1",
     "ipython>=8.18.1",
 ]
@@ -69,6 +69,7 @@ dev-dependencies = [
     "honcho>=1.1.0",
     "mypy>=1.0",
     "ruff>=0.1.0",
+    "httpx>=0.28.1",
 ]
 
 [tool.pytest.ini_options]
