Add honcho dev workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ dev-dependencies = [
     "pytest>=7.0",
     "pytest-asyncio>=0.21.0",
     "black>=23.0",
+    "honcho>=1.1.0",
     "mypy>=1.0",
     "ruff>=0.1.0",
 ]
