--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "test": "vitest",
+    "test": "node scripts/vitest-with-backend.mjs",
     "build": "tsc && vite build && vite build --config vite.config.export.ts",
     "preview": "vite preview",
     "ladle": "ladle serve",
