--- a/www/package.json
+++ b/www/package.json
@@ -10,8 +10,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.28.0",
-    "astro": "^4.16.0",
-    "sharp": "^0.32.5"
+    "astro": "^4.16.0"
   }
 }
