--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.3.0"
 description = "Interactive Python code editor with inline execution results"
 readme = "README.md"
 requires-python = ">=3.9,<3.14"
-license = {text = "Private"}
+license = {text = "MIT"}
 authors = [
     {name = "Harry Vangberg"},
 ]
