--- a/www/package.json
+++ b/www/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
-    "astro": "^4.16.0"
+    "astro": "^4.16.0",
+    "sharp": "^0.34.5"
   }
 }
